# rust-kata-003

./: .env  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: audit.yaml  general.yaml  scheduled-audit.yaml
configuration/: default.yaml  local.yaml  production.yaml
docs/: ARCHITECTURE.md
migrations/: 20210209200332_crate-metadata-and-crate-dependency.sql
scripts/: init_db.sh
src/: configuration.rs  crates_io_client.rs  lib.rs  main.rs  query.rs  resolver.rs  startup.rs  telemetry.rs
src/configuration/: crates_io_configuration.rs  environment.rs  http_server_configuration.rs  mod.rs  postgres_configuration.rs  redis_configuration.rs
src/crates_io_client/: dependencies.rs  mod.rs
src/domain/: crate_dependency.rs  crate_metadata.rs  crate_name.rs  crate_relationship.rs  crate_requirement.rs  crate_version.rs  create_dependency_type.rs  mod.rs
src/postgres_client/: get_crate_metadata.rs  mod.rs  save_crate_metadata.rs
src/routes/: dependency.rs  health.rs  mod.rs
tests/: dependency.rs  health.rs
tests/fixtures/: libc-0.2.86.json  mod.rs  proc-macro2-1.0.24.json
tests/support/: mod.rs
