[package]
name = "rust-kata-003"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-kata-003"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.1"
reqwest = "0.11.0"

[dev-dependencies]
actix-rt = "=2.0.0-beta.2"
tokio = { version = "1.1.1", features = ["rt", "net"] }
