[package]
name = "rust-kata-003"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-kata-003"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.1"
chrono = "0.4.19"
config = "0.10.1"
redis = { version = "0.19.0", features = [ "connection-manager", "tokio-comp" ] }
reqwest = "0.11.0"
serde = "1.0.123"
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "master", features = [ "macros", "migrate", "offline", "postgres", "runtime-actix-rustls" ] }
tracing = { version = "0.1.23", features = [ "log" ] }
tracing-actix-web = "0.3.0-beta.1"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = [ "chrono" ] }

[dev-dependencies]
actix-rt = "=2.0.0-beta.2"
fake = "2.4.0"
lazy_static = "1.4.0"
tokio = { version = "1.1.1", features = ["rt", "net"] }
