[package]
name = "rust-kata-003"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust-kata-003"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.3"
async-trait = "0.1.42"
chrono = "0.4.19"
config = "0.10.1"
redis = { version = "0.19.0", features = [ "connection-manager", "tokio-comp" ] }
reqwest = { version = "0.11.0", features = [ "json" ] }
serde = "1.0.123"
sqlx = { version = "0.5.1", features = [ "macros", "migrate", "offline", "postgres", "runtime-actix-rustls" ] }
tracing = { version = "0.1.23", features = [ "log" ] }
tracing-actix-web = "0.3.0-beta.2"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = [ "chrono" ] }

[dev-dependencies]
actix-rt = "2.0.2"
fake = "2.4.0"
lazy_static = "1.4.0"
tokio = { version = "1.2.0", features = ["rt", "net"] }
uuid = { version = "0.8.2", features = [ "v4" ] }
wiremock = "0.4.9"
